syntax = "proto3";

option csharp_namespace = "GrpcServices";

service PersonService {
  rpc CreatePerson (CreatePersonRequest) returns (PersonResponse);
  rpc GetPerson (GetPersonRequest) returns (PersonResponse);
  rpc UpdatePerson (UpdatePersonRequest) returns (PersonResponse);
  rpc DeletePerson (DeletePersonRequest) returns (DeletePersonResponse);
}

message CreatePersonRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string phone = 4;
  int32 age = 5;
}

message GetPersonRequest {
  int32 id = 1;
}

message UpdatePersonRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
  int32 age = 6;
}

message DeletePersonRequest {
  int32 id = 1;
}

message PersonResponse {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
  int32 age = 6;
}

message DeletePersonResponse {
  bool success = 1;
}